# Ollama_in_Action_Book

./: .gitignore  Book.txt  Ollama_Tools.md  Ollama_Utils.md  Preface.md  README.md  Setup.md  Subset.txt
source-code/: .gitignore  Makefile  README.md  agent_browser_use.py  example_chain_read_summary.py  example_chain_web_summary.py  example_judge.py  example_judge2.py  fast_test.py  graph_kuzu_property_example.py  langgraph_agent_test.py  local_search_tool_use.py  mem0_persistence.py  ollama_config.py  ollama_tools_examples.py  pyproject.toml  requirements.txt  research_agno_news.py  research_agno_web_question.py  smolagents_agent_test1.py  smolagents_test.py  smolagents_tools.py  tool_anti_hallucination.py  tool_judge_results.py  tool_llm_eval.py  tool_web_search.py
source-code/AG2_agents/: Makefile  README.md  agent.py  pyproject.toml
source-code/DSP/: Makefile  README.md  ollama_test.py  pyproject.toml
source-code/OllamaCloud/: Makefile  README.md  _NOT_YET_IN_BOOK_  hello.py  kimi-k2-1t-cloud.py  ollama_web_search.py  pyproject.toml  ui_chat_search.py
source-code/PydanticToolUse/: Makefile  README.md  pyproject.toml  tool_duckduckgo_search.py  tool_use_weather.py
source-code/RAG_zvec/: Makefile  README.md  app.py  pyproject.toml
source-code/SemanticNavigator/: .gitignore  Makefile  README.md  app.py  pyproject.toml
source-code/autogen/: Makefile  README.md  autogen_python_example.py  pyproject.toml
source-code/benchmarking_model_inference_speeds/: Makefile  README.md  inference_speed_tests.py  pyproject.toml
source-code/chains/: Makefile  README.md  example_chain_read_summary.py  example_chain_web_summary.py  (+1 more)
(+100 files in other folders)
