[project]
name = "ag2-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "ag2>=0.11.1",
    "fix-busted-json>=0.0.19",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "yfinance>=1.2.0",
]

[tool.uv]
exclude-newer = "2 days"
