[project]
name = "graph"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "grafeo>=0.5.22",
    "grafeo-langchain>=0.1.1",
    "kuzu>=0.11.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.10",
    "ollama>=0.6.0",
]

[tool.uv]
exclude-newer = "2 days"
